# buildinfo-om

./: .editorconfig  .gitignore  .licenseheader  .licenseheader.j2  .python-version  mkdocs.yml  pyproject.toml  zensical.toml
docs/: buildinfo-om.md
schema/: ReadMe.md  build-info.schema.json
src/: _runner.py
src/buildinfo_om/: __init__.py  _builder.py  _builder.pyi  _loadsave.py  _merge.py  _model.py  _vcs.py
util/annotate/: annotate.py
util/griffe/griffe_runtime/: __init__.py  extension.py
